<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_forgot_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_email_address"
        android:inputType="textPersonName" />


    <TextView android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_link_will_be"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="#DFFF0000"
        />

    <Button
        android:id="@+id/bt_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:text="@string/send" />
</LinearLayout>