<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/verify"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_serial_key"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/okbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:textStyle="bold"
        android:textColor="@color/bg1_text"
        android:text="@string/proceed" />
</LinearLayout>