<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/subject"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/bg1_hint"></android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/bg1_hint">

                <EditText
                    android:id="@+id/enquiry_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/bg1_hint">

        <EditText
            android:id="@+id/enquiry_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/place_your_query_here"
            android:inputType="textMultiLine"
            android:maxHeight="100dp"
            android:scrollbars="vertical"
            android:textSize="20sp"
            android:drawableRight="@drawable/selector_ic_voice_black_24dp" />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:textStyle="bold"
        android:text="@string/send"/>
</LinearLayout>